# Lab8

./: .flake8
API/: controller_api.py  main.py  model_task.py  test_api.py  view_schemas.py
calculator/: calculator.py
super_puper_pj/: .gitignore  README.md  pyproject.toml  setup.py
super_puper_pj/super_puper_pj/: __init__.py  main.py
super_puper_pj/super_puper_pj/tests/: test_main.py
