[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-puper-pj"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "An amazing Python package that greets the world"
readme = "README.md"
license = {text = "MIT"}
keywords = ["greeting", "hello", "example", "demo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/super_puper_pj"
Repository = "https://github.com/yourusername/super_puper_pj"
Issues = "https://github.com/yourusername/super_puper_pj/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']